# vosk-test

./: .gitignore  README.md  backend.py  pyproject.toml  test_microphone.py  transcribe_file.py
templates/: index.html
