[project]
name = "vosk-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "jinja2>=3.1.4",
    "pydub>=0.25.1",
    "python-multipart>=0.0.20",
    "sounddevice>=0.5.1",
    "uvicorn>=0.34.0",
    "vosk>=0.3.45",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.8.3",
]
